<resources>
    <string name="app_name">Day Check beta 2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="task">task</string>
    <string name="text_jaune">btn swicth to yellow</string>
    <string name="text_vert">btn switch to green</string>
    <string name="text_rouge">btn switch to red</string>
    <string name="add_new_task">Add new Task</string>
    <string name="task_name">Task name</string>
    <string name="save">save</string>
    <string name="day_checked">Day checked</string>
    <string name="score">00</string>
</resources>