<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp">

            <TextView
                android:id="@+id/popupname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="35dp"
                android:text="@string/add_new_task"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/popupname"
                android:hint="@string/task_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="25sp" />

            <Button
                android:id="@+id/save_Task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tableRow"
                android:layout_marginTop="8dp"
                android:text="@string/save"/>

            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_task"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/yellowbtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="30dp"
                    android:background="@color/yellow"
                    android:contentDescription="@string/text_jaune" />

                <ImageButton
                    android:id="@+id/greenbtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/green"
                    android:contentDescription="@string/text_vert" />

                <ImageButton
                    android:id="@+id/redbtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:background="@color/red"
                    android:contentDescription="@string/text_rouge" />

            </TableRow>


        </RelativeLayout>


</LinearLayout>

